<resources>
    <string name="app_name">ClubArena</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register">REGISTER</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="user_name">USER NAME</string>
    <string name="no_account_yet">NO ACCOUNT YET?</string>
    <string name="already_have_account">ALREADY HAVE AN ACCOUNT?</string>
    <string name="use_my_location">USE MY CURRENT LOCATION</string>
    <string name="find_clubs">FIND CLUBS NEAR YOU</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="club_name">CLUB NAME</string>
    <string name="away">1.5 KM away</string>
    <string name="enter">ENTER</string>
    <string name="verify_pass">VERIFY PASSWORD</string>
    <string name="verify_email">VERIFY EMAIL</string>
    <string name="reset_pass">RESET PASSWORD</string>
    <string name="forget_email">FORGET PASSWORD</string>
    <string name="verify_code">VERIFY CODE</string>
    <string name="btn_ok">OK</string>
    <string name="club_type">CLUB TYPE</string>
    <string name="open_time">OPEN TIME</string>
    <string name="close_time">CLOSE TIME</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="acknowledment">I Acknowledge that I’m elder then 18 , and by clicking this
        I agreed with the app privacy policies. </string>
    <string name="default_notification_channel_id">
AIzaSyAdKC7iMUO_MgE5IfqbJ9KpHYg--OFWW4A</string>
</resources>
