
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back2"
    tools:context="com.techease.clubarena.ui.fragments.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cvSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                card_view:cardBackgroundColor="@color/colorAccent"
                card_view:cardCornerRadius="15dp"
                card_view:cardPreventCornerOverlap="true"
                card_view:cardUseCompatPadding="true"
                >

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:text="@string/sign_in"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_email_signin"
                    android:layout_width="260sp"
                    android:layout_height="40sp"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10sp"
                    android:background="@color/editTextColor"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10sp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="15sp" />


                <EditText
                    android:id="@+id/et_password_signin"
                    android:layout_width="260sp"
                    android:layout_height="40sp"
                    android:layout_gravity="center|bottom"
                    android:layout_marginBottom="100sp"
                    android:background="@color/editTextColor"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10sp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="15sp" />




    </LinearLayout>


                <Button
                    android:id="@+id/btn_signin"
                    android:layout_width="170sp"
                    android:layout_height="40sp"
                    android:layout_gravity="center|bottom"
                    android:layout_marginBottom="50sp"
                    android:background="@color/colorPrimary"
                    android:text="@string/sign_in"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:layout_marginBottom="20sp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_account_yet"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/tv_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5sp"
                        android:text="@string/register"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        android:textStyle="bold" />



                </LinearLayout>

                <TextView
                    android:id="@+id/tv_forgot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_email"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_gravity="bottom"
                    android:textStyle="bold"
                    />

            </android.support.v7.widget.CardView>
        </LinearLayout>

    </ScrollView>
</LinearLayout>