
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back2"
    tools:context="com.techease.clubarena.ui.fragments.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:orientation="vertical">
            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="400sp"
                android:clickable="true"
                android:layout_marginTop="20sp"
                card_view:cardCornerRadius="15dp"
                card_view:cardBackgroundColor="@color/colorAccent"
                card_view:cardPreventCornerOverlap="true"
                card_view:cardUseCompatPadding="true"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_gravity="center"
                android:id="@+id/cvSignUp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="15sp"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    />

                <EditText
                    android:id="@+id/etUsernameSignUp"
                    android:layout_width="260sp"
                    android:layout_height="50sp"
                    android:hint="@string/user_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:padding="10sp"
                    android:textColorHint="@color/colorPrimary"
                    android:background="@color/editTextColor"
                    android:layout_gravity="center"
                    android:inputType="textEmailAddress"
                    android:layout_marginBottom="75sp"
                    />
                <EditText
                    android:id="@+id/etEmailSignUp"
                    android:layout_width="260sp"
                    android:layout_height="50sp"
                    android:hint="@string/email"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:padding="10sp"
                    android:textColorHint="@color/colorPrimary"
                    android:background="@color/editTextColor"
                    android:layout_gravity="center"
                    android:inputType="textEmailAddress"
                    android:layout_marginBottom="15sp"
                    />
                <EditText
                    android:id="@+id/etPasswordSignUp"
                    android:layout_width="260sp"
                    android:layout_height="50sp"
                    android:textSize="15sp"
                    android:hint="@string/password"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    android:padding="10sp"
                    android:background="@color/editTextColor"
                    android:layout_gravity="center|bottom"
                    android:inputType="textPassword"
                    android:layout_marginBottom="122sp"
                    />
                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="170sp"
                    android:layout_height="40sp"
                    android:background="@color/colorPrimary"
                    android:layout_gravity="center|bottom"
                    android:layout_marginBottom="50sp"
                    android:text="@string/register"
                    android:textStyle="bold"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:layout_marginBottom="20sp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_account"
                        android:textColor="@color/colorPrimary"
                        />
                    <TextView
                        android:id="@+id/tvSignInSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_in"
                        android:layout_marginLeft="5sp"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/colorPrimary"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>