<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.techease.clubarena.ui.fragments.ResetPassFragment">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/back2"
        android:alpha="0.8"
        tools:context="com.techease.clubarena.ui.fragments.RegisterFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


                <android.support.v7.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/cvSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:layout_margin="20dp"
                    card_view:cardBackgroundColor="@color/colorAccent"
                    card_view:cardCornerRadius="15dp"
                    card_view:cardPreventCornerOverlap="true"
                    card_view:cardUseCompatPadding="true"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|top"
                            android:text="@string/reset_pass"
                            android:textColor="@color/colorPrimary"
                            android:textSize="25sp"
                            android:layout_marginTop="10dp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/et_pass_reset"
                            android:layout_width="260sp"
                            android:layout_height="40sp"
                            android:layout_gravity="center|top"
                            android:layout_marginTop="30dp"
                            android:layout_marginBottom="10sp"
                            android:background="@color/editTextColor"
                            android:hint="@string/password"
                            android:inputType="textEmailAddress"
                            android:padding="10sp"
                            android:textColor="@color/colorPrimary"
                            android:textColorHint="@color/colorPrimary"
                            android:textSize="15sp" />


                        <EditText
                            android:id="@+id/et_passmatch_reset"
                            android:layout_width="260sp"
                            android:layout_height="40sp"
                            android:layout_gravity="center|bottom"
                            android:background="@color/editTextColor"
                            android:hint="@string/verify_pass"
                            android:inputType="textEmailAddress"
                            android:padding="10sp"
                            android:textColor="@color/colorPrimary"
                            android:textColorHint="@color/colorPrimary"
                            android:textSize="15sp" />

                        <Button
                            android:id="@+id/btn_reset"
                            android:layout_width="wrap_content"
                            android:layout_height="40sp"
                            android:layout_marginTop="20dp"
                            android:layout_gravity="center|bottom"
                            android:layout_marginBottom="20sp"
                            android:background="@color/colorPrimary"
                            android:text="@string/enter"
                            android:textColor="@color/colorAccent"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

        </ScrollView>
    </LinearLayout>

</FrameLayout>
